plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'edu.sc.seis.launch4j' version '3.0.6'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    maven { url "https://maven.org/processing" }
    maven { url "https://jogamp.org/deployment/maven"}
}

dependencies {
    implementation 'org.processing:core:4.3.2'
    implementation 'com.google.code.gson:gson:2.8.9'
    implementation 'org.jogamp.gluegen:gluegen-rt-main:2.5.0'
    implementation 'org.jogamp.jogl:jogl-all:2.5.0'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}
java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

application {
    mainClassName = 'fr.iamacat.PEmbroiderLauncher'
}

import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar

shadowJar {
    archiveFileName = 'untitled-dependencies.jar'
}

launch4j {
    mainClassName = 'fr.iamacat.PEmbroiderLauncher'
    jreMinVersion = '17'
    initialHeapSize = 512
    maxHeapSize = 4096
    jvmOptions = [
            '-XX:+UseZGC'
    ]
    jarTask = tasks.named("shadowJar")
    outputDirectory = file("$buildDir/libs")
    outfile = 'Catz-EmbroideryLauncher.exe'
    copyConfigurable = files(tasks.named("shadowJar").get().archiveFile)
}

tasks.register('buildEditor', ShadowJar) {
    archiveFileName = 'PEmbroiderEditor.jar'
    manifest {
        attributes 'Main-Class': 'fr.iamacat.pembroider_editor.Main'
    }
}

tasks.register('buildConverter', ShadowJar) {
    archiveFileName = 'PEmbroiderConverter.jar'
    manifest {
        attributes 'Main-Class': 'fr.iamacat.pembroider_converter.Main'
    }
}
tasks.register('buildViewer', ShadowJar) {
    archiveFileName = 'PEmbroiderConverter.jar'
    manifest {
        attributes 'Main-Class': 'fr.iamacat.pembroider_viewer.Main'
    }
}
tasks.register('buildInfiniteDraw', ShadowJar) {
    archiveFileName = 'PEmbroiderInfiniteDraw.jar'
    manifest {
        attributes 'Main-Class': 'fr.iamacat.pembroider_infinitedraw.Main'
    }
}
tasks.named("build") {
    dependsOn buildEditor, buildConverter, buildViewer, buildInfiniteDraw
    finalizedBy tasks.named("createExe")
}
